--- a/installer/app/keyboards/Tamil-tamil99.txt.in
+++ b/installer/app/keyboards/Tamil-tamil99.txt.in
@@ -35,7 +35,9 @@
 ### comprehensive information for the keymap usage, issues and  future plans are to be be covered.
 ### K. Sethu 2010.11.18
 ### ************************************
-
+### Bugs fixed : Bugs issue # 75 : http://code.google.com/p/ekalappai/issues/detail?id=75
+### K. Sethu 2011.09.14
+### ***********************************
 ### Begin Table data.
 BEGIN_TABLE
 ! !
@@ -52,6 +54,7 @@ $ $
 
 & &
 7 7
+* *
 8 8
 ( (
 9 9
@@ -66,6 +69,7 @@ _ _
 ~ ~
 | |
 \ \
+M /
 < <
 > >
 ? ?
