Added Bamini keyboard changes give by Sethu and added icon file for installer

--- a/installer/app/keyboards/Tamil-bamini.txt.in
+++ b/installer/app/keyboards/Tamil-bamini.txt.in
@@ -1402,4 +1402,19 @@ Whp றுரி
 Whpp றுரீ
 WhP றுரீ
 
+`h; ஹர்
+`hp ஹரி
+`hpp ஹரீ
+`hP ஹரீ
+
+\h; ஷர்
+\hp ஷரி
+\hpp ஷரீ
+\hP ஷரீ
+
+]h; ஸர்
+]hp ஸரி
+]hpp ஸரீ
+]hP ஸரீ
+
 END_TABLE
