--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-build-ekalappai-Desktop_Qt_5_2_0_MinGW_32bit-Debug/*
-build-ekalappai-Desktop_Qt_5_2_0_MinGW_32bit-Release/*
+build-ekalappai-Desktop*
 ekhook/Debug/*
 ekhook/Release/*
 ekhook/ekhook/*
+*.user
